--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Náš Shop</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+    header {
+      background-color: #0057b7;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+    }
+    header .logo img {
+      height: 40px;
+    }
+    nav a {
+      color: white;
+      margin-left: 20px;
+      text-decoration: none;
+    }
+    .hero {
+      width: 100%;
+      height: 300px;
+      background: url('https://via.placeholder.com/1200x300') no-repeat center/cover;
+    }
+    .products-home, .category {
+      display: flex;
+      justify-content: space-around;
+      padding: 20px;
+    }
+    .product {
+      width: 30%;
+      text-align: center;
+    }
+    .product img {
+      width: 100%;
+    }
+    h1 {
+      text-align: center;
+      padding: 20px 0;
+    }
+    footer {
+      background-color: #0057b7;
+      color: white;
+      padding: 20px;
+    }
+    footer h2 {
+      text-align: center;
+    }
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    input, textarea, button {
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+    }
+    button {
+      background-color: white;
+      color: #0057b7;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="https://via.placeholder.com/100x40?text=Logo" alt="Logo">
+      </a>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="shop.html">Shop</a>
+      <a href="onas.html">O nás</a>
+      <a href="kontakt.html">Kontakt</a>
+    </nav>
+  </header>
+
+  <!-- Domovská stránka -->
+  <main>
+    <h1>Vítejte v našem obchodě</h1>
+    <div class="hero"></div>
+    <div class="products-home">
+      <div class="product">
+        <img src="https://via.placeholder.com/300" alt="Produkt 1">
+        <p>Produkt 1</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/300" alt="Produkt 2">
+        <p>Produkt 2</p>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/300" alt="Produkt 3">
+        <p>Produkt 3</p>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <h2>Kontaktujte nás!</h2>
+    <form>
+      <input type="text" name="jmeno" placeholder="Jméno" required>
+      <input type="text" name="prijmeni" placeholder="Příjmení" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <textarea name="zprava" rows="4" placeholder="Váš dotaz..." required></textarea>
+      <button type="submit">Odeslat</button>
+    </form>
+  </footer>
+</body>
+</html>
 
