--- a/onas.html
+++ b/onas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shop</title>
+  <title>O nás</title>
   <style>
     body {
       margin: 0;
@@ -26,25 +26,18 @@
       text-decoration: none;
       font-size: 18px;
     }
+    main {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
     h1 {
       text-align: center;
-      padding: 20px 0;
+      margin-bottom: 30px;
     }
-    .category {
-      padding: 20px;
-    }
-    .products {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      gap: 20px;
-    }
-    .product {
-      width: 18%;
-      text-align: center;
-    }
-    .product img {
-      width: 100%;
+    p {
+      font-size: 18px;
+      line-height: 1.6;
     }
     footer {
       background-color: #0057b7;
@@ -90,29 +83,16 @@
   </header>
 
   <main>
-    <h1>Shop</h1>
-
-    <section class="category">
-      <h2>Nikkas</h2>
-      <div class="products">
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Nikkas 1"><p>Nikkas 1</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Nikkas 2"><p>Nikkas 2</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Nikkas 3"><p>Nikkas 3</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Nikkas 4"><p>Nikkas 4</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Nikkas 5"><p>Nikkas 5</p></div>
-      </div>
-    </section>
-
-    <section class="category">
-      <h2>Juice</h2>
-      <div class="products">
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Juice 1"><p>Juice 1</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Juice 2"><p>Juice 2</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Juice 3"><p>Juice 3</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Juice 4"><p>Juice 4</p></div>
-        <div class="product"><img src="https://via.placeholder.com/200" alt="Juice 5"><p>Juice 5</p></div>
-      </div>
-    </section>
+    <h1>O nás</h1>
+    <p>
+      Vítejte v našem obchodě! Jsme nadšení pro kvalitní produkty a výjimečné zákaznické služby.
+      Naše kategorie "Nikkas" a "Juice" nabízejí jedinečný výběr zboží pro každého. Naším cílem je
+      vytvořit pozitivní a přátelské prostředí pro všechny naše zákazníky.
+    </p>
+    <p>
+      Náš tým se skládá z odborníků, kteří milují to, co dělají. Neustále pracujeme na rozšiřování
+      naší nabídky a zlepšování vašich nákupních zážitků.
+    </p>
   </main>
 
   <footer>
